@@ -123,7 +123,7 @@ class TestDataset(unittest.TestCase):
         self.source = hxl.data(DATA)
 
     def test_min(self):
-        self.assertEquals('100', self.source.min('#affected'))
+        self.assertEqual('100', self.source.min('#affected'))
 
     def test_min_date(self):
         DATA = [
@@ -131,7 +131,7 @@ class TestDataset(unittest.TestCase):
             ['2018-01-01'],
             ['1/1/2019']
         ]
-        self.assertEquals('2018-01-01', hxl.data(DATA).min('#date'))
+        self.assertEqual('2018-01-01', hxl.data(DATA).min('#date'))
 
     def test_min_year(self):
         DATA = [
@@ -139,10 +139,10 @@ class TestDataset(unittest.TestCase):
             ['2018'],
             ['2017']
         ]
-        self.assertEquals('2017', hxl.data(DATA).min('#date'))
+        self.assertEqual('2017', hxl.data(DATA).min('#date'))
 
     def test_max(self):
-        self.assertEquals('300', self.source.max('#affected'))
+        self.assertEqual('300', self.source.max('#affected'))
 
     def test_cached(self):
         dataset = Dataset()
@@ -442,7 +442,7 @@ class TestRowQuery(unittest.TestCase):
         query = RowQuery.parse('#affected is min')
         self.assertTrue(query.needs_aggregate)
         query.calc_aggregate(source)
-        self.assertEquals('100', query.value)
+        self.assertEqual('100', query.value)
         for row in source:
             if query.match_row(row):
                 self.assertEqual(100, float(row.get('#affected')))
@@ -454,7 +454,7 @@ class TestRowQuery(unittest.TestCase):
         query = RowQuery.parse('#affected is max')
         self.assertTrue(query.needs_aggregate)
         query.calc_aggregate(source)
-        self.assertEquals('300', query.value)
+        self.assertEqual('300', query.value)
         for row in source:
             if query.match_row(row):
                 self.assertEqual(300, float(row.get('#affected')))
